cicd/ig/overlays/ship/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: openig-openig
    release: openig
    vendor: forgerock
  name: openig
spec:
  rules:
  - host: warren.iam.forgeops.com
    http:
      paths:
      - backend:
          serviceName: openig
          servicePort: 80
        path: /ig
  tls:
  - hosts:
    - warren.iam.forgeops.com
